:lipstick: 	feat: Melhorando as telas, conectando-as, gerando a home do organizador e do funcionário

--- a/view/html/indexPonto.html
+++ b/view/html/indexPonto.html
@@ -18,7 +18,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-item nav-link" href="../index.html">Login</a>
+                <a class="nav-item nav-link" href="../html/indexHomeFuncionário.html">Home</a>
             </div>
         </div>
     </nav>
@@ -31,9 +31,6 @@
                 <input type="password" class="form-control" id="senha" placeholder="Digite sua senha" required>
             </div>
             <button type="submit" class="btn btn-primary btn-block">Registrar</button>
-            <div class="text-center mt-3">
-                <a href="#">Esqueceu a senha?</a>
-            </div>
         </form>
     </div>
 
