--- a/view/html/indexRecuperarSenha.html
+++ b/view/html/indexRecuperarSenha.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/styleRecuperarSenha.css">
     <title>Login</title>
 </head>
 
@@ -19,19 +19,16 @@
         </button>
     </nav>
     <div class="login-container">
-        <h2 class="text-center">Login</h2>
+        <h2 class="text-center">Recuperar senha</h2>
         <form>
             <div class="form-group">
                 <label for="email">E-mail</label>
                 <input type="email" class="form-control" id="email" placeholder="Digite seu e-mail" required>
             </div>
-            <div class="form-group">
-                <label for="senha">Senha</label>
-                <input type="password" class="form-control" id="senha" placeholder="Digite sua senha" required>
-            </div>
+
             <a href="html/indexHomeOrganizador.html"><button type="submit" class="btn btn-primary btn-block">Entrar</button></a>
             <div class="text-center mt-3">
-                <a href="html/indexRecuperarSenha.html">Esqueceu a senha?</a>
+                <a href="../index.html">Voltar ao login</a>
             </div>
         </form>
     </div>
