:sparkles: 	feat: Criando as telas relacionadas as ações do organizador (Cadastrar funcionário, Remover funcionário, Configurar horário, Gerar relatório)

--- a/view/html/indexHomeOrganizador.html
+++ b/view/html/indexHomeOrganizador.html
@@ -24,16 +24,16 @@
         </div>
         <div class="row">
             <div class="col-md-6 col-lg-3 mb-3">
-                <a href="/cadastrar-funcionario" class="btn btn-success w-100 py-3">Cadastrar Funcionário</a>
+                <a href="indexCadastrarFuncionario.html" class="btn btn-success w-100 py-3">Cadastrar Funcionário</a>
             </div>
             <div class="col-md-6 col-lg-3 mb-3">
-                <a href="/remover-funcionario" class="btn btn-success w-100 py-3">Remover Funcionário</a>
+                <a href="indexRemoverFuncionario.html" class="btn btn-success w-100 py-3">Remover Funcionário</a>
             </div>
             <div class="col-md-6 col-lg-3 mb-3">
-                <a href="/configurar-almoco" class="btn btn-success w-100 py-3">Configurar Horários</a>
+                <a href="indexConfigurar.html" class="btn btn-success w-100 py-3">Configurar Horários</a>
             </div>
             <div class="col-md-6 col-lg-3 mb-3">
-                <a href="/relatorio-horas" class="btn btn-success w-100 py-3">Gerar Relatório</a>
+                <a href="indexRelatorio.html" class="btn btn-success w-100 py-3">Gerar Relatório</a>
             </div>
         </div>
     </div>
