--- a/system/css/styleHomeOrganizador.css
+++ b/system/css/styleHomeOrganizador.css
@@ -5,6 +5,10 @@ body {
     min-height: 100vh;
 }
 
+.header-title {
+    color: #00b129;
+}
+
 .btn-primary, .btn-success {
     background-color: #00b129 !important; /* Verde */
     border-color: #00b129 !important;
@@ -15,21 +19,8 @@ body {
     border-color: #008f21 !important;
 }
 
-div form a {
-    color: #00b129 !important;
-}
-
-.login-container, .card-container {
-    max-width: 600px;
-    margin: 30px auto;
-    padding: 20px;
-    border: 1px solid #ced4da;
-    border-radius: 5px;
-    background-color: #ffffff;
-}
-
-.header-title {
-    color: #00b129;
+.card-container {
+    text-align: center;
 }
 
 footer {
@@ -38,14 +29,5 @@ footer {
     text-align: center;
     padding: 10px 0;
     width: 100%;
-    margin-top: auto; /* Empurra o footer para o final da página */
-}
-
-/* Tamanho fixo para os botões */
-.option-button {
-    height: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1rem;
+    margin-top: auto;
 }
